Added access and refresh token value checking.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,13 +16,13 @@ const favCities = [
             <article
                 class="top-margin medium-elevate medium-width center center-align middle-align surface"
             >
-                <h1 class="freeman-regular">Dobrodošli u CoffeePlace</h1>
+                <h2 class="freeman-regular">CoffeePlace ☕️</h2>
             </article>
         </div>
 
         <article class="top-margin medium-elevate medium-width center surface">
             <div
-                class="field large prefix round fill small-elevate vertical-margin medium-margin"
+                class="field large prefix round fill small-elevate bottom-margin medium-margin"
             >
                 <i class="front">search</i>
                 <input
@@ -48,5 +48,13 @@ const favCities = [
                 }
             </div>
         </article>
+
+        <div class="center top-margin">
+            <a
+                href="/dashboard"
+                class="small-text primary-text primary-hover center"
+                >Administrator log-in</a
+            >
+        </div>
     </main>
 </Layout>
