--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -10,11 +10,60 @@ const refreshToken = cookies.get("sb-refresh-token");
 if (accessToken && refreshToken) {
     return redirect("/dashboard");
 }
+
+if (!cookies.get("referrer-url")) {
+    cookies.set("referrer-url", "/", {
+        path: "/",
+    });
+}
 ---
 
 <Layout title="Log in">
     <h1>Log in</h1>
     <p>New here? <a href="/register">Create an account</a></p>
     <!-- <form action="/api/auth/login" method="post"> -->
-    <LoginForm />
+    <dialog id="dialog" class="active enter small-width">
+        <form id="login-form">
+            <div class="field label border">
+                <input id="email" name="email" type="email" />
+                <label for="email">E-mail</label>
+            </div>
+            <div class="field label border">
+                <input id="password" name="password" type="password" />
+                <label for="password">Password</label>
+            </div>
+            <button type="submit">Login</button>
+        </form>
+    </dialog>
 </Layout>
+
+<script>
+    document
+        .getElementById("login-form")
+        .addEventListener("submit", async (event) => {
+            event.preventDefault(); // Prevent the default form submission
+
+            const formData = new FormData(event.target);
+            const email = formData.get("email");
+            const password = formData.get("password");
+
+            try {
+                const response = await fetch("/api/auth/login", {
+                    method: "POST",
+                    body: formData,
+                });
+
+                if (!response.ok) {
+                    const errorMessage = await response.text(); // Assuming the server sends plain text for errors
+                    alert(errorMessage); // Display the error message in an alert
+                } else if (response.redirected) {
+                    if (response.url) {
+                        window.location.href = response.url; // Handle successful log-in here, e.g., redirecting the user
+                    }
+                }
+            } catch (error) {
+                console.error("Error signing in:", error);
+                alert("An unexpected error occurred. Please try again later."); // Generic error message
+            }
+        });
+</script>
