Locations are now searchable.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
             src="https://cdn.jsdelivr.net/npm/beercss@3.5.6/dist/cdn/beer.min.js"
         ></script>
     </head>
-    <body>
+    <body class="brown3">
         <slot />
     </body>
 </html>
