--- a/src/pages/management/locations.astro
+++ b/src/pages/management/locations.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from "../../layouts/Layout.astro";
-import { supabase } from "../../db/supabase";
+import Layout from "@layouts/Layout.astro";
+import { supabase } from "@databases/supabase.js";
 
 const { cookies, redirect } = Astro;
 
@@ -59,39 +59,72 @@ const locations = [
 
 <Layout title="CoffeePlace">
     <main>
-        <article
-            class="vertical-margin medium-elevate medium-width center surface"
-        >
-            <div
-                class="field large prefix round fill small-elevate bottom-margin medium-margin"
+        <div class="center-align top-margin large-margin">
+            <article
+                class="top-margin medium-elevate medium-width center center-align middle-align surface"
             >
-                <i class="front">search</i>
-                <input
-                    v-model="searchQuery"
-                    class="primary-hover"
-                    type="text"
-                    placeholder="Pretražite lokacije..."
-                />
-            </div>
-            <div class="small-divider"></div>
-            <div>
-                {
-                    locations.map((location) => (
-                        <div class="bottom-margin small-margin">
-                            <a href={"/locations/" + location.uuid}>
-                                <div>
-                                    <h6>{location.neighborhood}</h6>
-                                    <span>
-                                        {location.street_address +
-                                            ", " +
-                                            location.city}
-                                    </span>
-                                </div>
-                            </a>
-                        </div>
-                    ))
-                }
-            </div>
-        </article>
+                <h4 class="freeman-regular">Locations management</h4>
+            </article>
+        </div>
+
+        <div
+            class="field vertical-margin large center medium-width prefix small-elevate round fill"
+        >
+            <i class="front">search</i>
+            <input
+                id="search"
+                class="primary-hover surface"
+                type="text"
+                placeholder="Pretražite lokacije..."
+            />
+        </div>
+
+        <div
+            id="locations-container"
+            class="medium-width center surface round small-padding shadow"
+        >
+        </div>
+
+        <div class="center top-margin">
+            <a
+                href="/dashboard"
+                class="white round horizontal-padding small-padding small-text large primary-hover center"
+            >
+                Add a new location
+            </a>
+        </div>
     </main>
 </Layout>
+
+<script define:vars={{ locations }}>
+    const locationsContainer = document.getElementById("locations-container");
+
+    function renderLocations(locations) {
+        locationsContainer.innerHTML = locations
+            .map(
+                (location) => `
+            <div class="margin small-margin">
+                <a href="/management/locations/${location.uuid}/edit">
+                    <div>
+                        <h6>${location.neighborhood}</h6>
+                        <span>
+                            ${location.street_address}, ${location.city}
+                        </span>
+                    </div>
+                </a>
+            </div>`,
+            )
+            .join("");
+    }
+
+    document.getElementById("search").addEventListener("keyup", (event) => {
+        const filterValue = event.target.value.toLowerCase();
+        const filteredLocations = locations.filter((location) =>
+            location.neighborhood.toLowerCase().includes(filterValue),
+        );
+
+        renderLocations(filteredLocations);
+    });
+
+    renderLocations(locations);
+</script>
