--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,6 +24,9 @@ const { title } = Astro.props;
             type="module"
             src="https://cdn.jsdelivr.net/npm/beercss@3.5.6/dist/cdn/beer.min.js"
         ></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/interactjs@latest/dist/interact.min.js"
+        ></script>
     </head>
     <body class="brown3">
         <slot />
